--- a/wa/wa4/test.css
+++ b/wa/wa4/test.css
@@ -26,12 +26,12 @@ body {
     border-radius: 1.5em 1.5em 0 0;
   }
   
-  .card footer {
+.card footer {
     background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
     border-radius: 0 0 1.5em 1.5em;
   }
   
-card article img {
+.card article img {
     max-height: 100%;
     float: right;
   }
