--- a/wa/wa4/test.css
+++ b/wa/wa4/test.css
@@ -37,11 +37,16 @@ body {
   }
 
 .card header, .card footer {
-  height: 3em;
+  height: 5em;
   padding: 1 em;
 }
 
 .card article {
 height: 12em;
 background-color: rgba(0,0,0,.5);
+}
+
+.card header h2{
+font-size: 2em;
+line-height: 3em;
 }
