--- a/wa/wa4/test.css
+++ b/wa/wa4/test.css
@@ -43,7 +43,7 @@ body {
 
 .card article {
 height: 12em;
-background-color: rgba(0,0,0,.5);
+background-color: rgb(75, 77, 79);
 }
 
 .card header h2{
