--- a/wa/wa4/test.css
+++ b/wa/wa4/test.css
@@ -43,7 +43,7 @@ body {
 
 .card article {
 height: 12em;
-background-color: rgb(75, 77, 79);
+background-color: rgba(0, 0, 0, 0.119);
 }
 
 .card header h2 {
@@ -62,6 +62,5 @@ line-height: 3em;
 
 .card article p {
   padding-left: 1em;
-  padding-top: 1.5em;
   color: white
 }
