--- a/wa/wa7/wa7.css
+++ b/wa/wa7/wa7.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: blanchedalmond;
-    font-family:fantasy
+    font-family:fantasy;
 }
 nav{
     height: 50vh;
