--- a/midterm/midterm.css
+++ b/midterm/midterm.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     text-align: center;
     overflow-x: hidden; 
-    overflow-y:auto;
+    overflow-y: auto;
     position: relative; 
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 .stars {
-    background: #000 url('stars.png') repeat top center;
+    background: #000000 url('stars.png') repeat top center;
     z-index: 0;
 }
 
@@ -49,7 +49,7 @@ body {
 }
 
 header {
-    padding: 30px 20px;
+    padding: 25px 50px 75px 100px;
     text-transform: uppercase;
     position: relative; 
     z-index: 10;
@@ -62,7 +62,7 @@ header h1 {
 }
 
 header h2 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: #999;
     font-weight: 300;
 }
@@ -93,23 +93,29 @@ header h2 {
 }
 
 .tour-row:hover {
-    background: rgba(255, 255, 255, 0.1);
+    background: #99999960;
 }
 
 .tour-date {
+    text-align: center;
     color: #fce79a;
     font-weight: bold;
 }
 
-.tour-venue, .tour-location {
+.tour-conductor {
     color: #fff;
+    font-weight: bold;
+}
+
+.tour-venue, .tour-location {
+    color: #999;
 }
 
 .tour-info a {
     color: #00ffff;
     text-decoration: none;
     border: 1px solid #00ffff;
-    padding: 5px 10px;
+    padding: 5px 10px 5px 10px;
     border-radius: 5px;
     transition: all 0.3s ease;
 }
@@ -133,6 +139,8 @@ header h2 {
 
 .concert-description h3 {
     font-size: 1.8rem;
+    font-weight: bold;
+    color: #fce79a;
     margin-bottom: 10px;
 }
 
