--- a/css/index.css
+++ b/css/index.css
@@ -225,4 +225,11 @@ footer a:hover {
     }
 }
 
+@media (min-width: 1500px) {
+    .tour-schedule {
+        max-width: 1200px; /* Makes sure it doesn’t stretch too wide */
+    }
+}
+
+
 
