--- a/CodePen/webDev10/style.css
+++ b/CodePen/webDev10/style.css
@@ -1,3 +1,55 @@
+@property --r {
+  syntax: "<percentage>";
+  initial-value: 0%;
+  inherits: false;
+}
+@property --g {
+  syntax: "<percentage>";
+  initial-value: 0%;
+  inherits: false;
+}
+html, body, div {
+  display: grid;
+}
+
+html {
+  min-height: 100%;
+}
+
 body {
-  margin:0
+  background: #bfdbfa;
+}
+
+svg[aria-hidden=true][height="0"] {
+  position: fixed;
+}
+
+div {
+  place-self: center;
+  border: solid 1em rgb(254, 238, 150);
+  width: 30em;
+  aspect-ratio: 1;
+  border-radius: 3em;
+}
+div::after {
+  --l: rgb(var(--r) var(--g) 0%),
+  		rgb(calc(100% - var(--r)) calc(100% - var(--g)) 0%);
+  margin: -2em;
+  background: radial-gradient(var(--l)), linear-gradient(var(--l)), conic-gradient(at 0 100%, var(--l) 25%);
+  background-blend-mode: difference;
+  clip-path: inset(3em round 1em);
+  animation: r 4.7s ease-in-out -1.93s infinite alternate, g 4.3s ease-in-out -2.37s infinite alternate;
+  filter: url(#smoke) invert(1) saturate(2);
+  content: "";
+}
+
+@keyframes r {
+  to {
+    --r: 50% ;
+  }
+}
+@keyframes g {
+  to {
+    --g: 50% ;
+  }
 }
