--- a/js practice/js.css
+++ b/js practice/js.css
@@ -60,6 +60,6 @@ body {
 #message {
     margin-top: 20px;
     font-weight: bold;
-    color: #d32f2f;
+    color: #3bfb95;
     font-size: 1.2rem;
 }
